--- a/menu_jankowski.html
+++ b/menu_jankowski.html
@@ -18,6 +18,6 @@
         <a href="poczta_jankowski.html"><img src="icon_mail.png"> Poczta</a>
     </div>
 
-    <p style="text-align:center;"><a href="index_jankowski.html">W R Ó Ć</a></p>
+    <p style="text-align:center;"><a href="index.html">W R Ó Ć</a></p>
 </body>
 </html>
